initial user defined identityFn setup implemented

--- a/src/popup.html
+++ b/src/popup.html
@@ -1,9 +1,17 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title></title>
-</head>
-<body>
-
-</body>
+	<head>
+		<meta charset="utf-8">
+		<title>XMLHttp Cacher</title>
+		<link rel="stylesheet" type="text/css" href="./mystyles.css">
+	</head>
+	<body>
+		<div class="container">
+			<p>function (url, post) {</p>
+			<textarea id="custom_id_fn" placeholder="Fn's body goes here"></textarea>
+			<p>}</p>
+			<button id="submit_fn">Submit</button>
+		</div>
+	</body>
+	<script type="text/javascript" src="./popup.js"></script>
 </html>
