user warn added to popup

--- a/src/popup.html
+++ b/src/popup.html
@@ -11,6 +11,7 @@
 			<textarea id="custom_id_fn" placeholder="Fn's body goes here"></textarea>
 			<p>}</p>
 			<button id="submit_fn">Submit</button>
+			<p id="user_message"></p>
 		</div>
 	</body>
 	<script type="text/javascript" src="./popup.js"></script>
