--- a/src/popup.html
+++ b/src/popup.html
@@ -7,6 +7,10 @@
 	</head>
 	<body>
 		<div class="container">
+		<div>
+			<input type="checkbox" id="use_caching">
+			<label for='use_caching'>Use caching for current page</label>
+		</div>
 			<p>function (url, post) {</p>
 			<textarea id="custom_id_fn" placeholder="Fn's body goes here"></textarea>
 			<p>}</p>
